# SQLALCHEMY_Alembic

./: .gitignore  README.md  pyproject.toml  run.py  use_select.py
alembic/: env.py
alembic/versions/: 27cfc1d2a30d_creating_the_course_and_teacher_tables.py  ee1c690104ea_creating_the_students_and_registrations_.py
database/: relation.sql
infra/configs/: connection.py
infra/entities/: __init__.py  course.py  registration.py  student.py  teacher.py
infra/repositories/: course_repositories.py  registration_repositories.py  student_repositories.py  teacher_repositories.py
