[tool.poetry]
name = "sqlalchemy-alembic"
version = "0.1.0"
description = "SQLAlchemy + migrations alembic"
authors = ["AlekysCoelho <alekyscoelho@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_alembic"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
